# mahsooli-bot

./: .env.example  .gitignore  Mahala.geojson  README.md  config.py  gcs.py  gdrive.py  ndvi_run_pipeline.py  next.config.mjs  package-lock.json  package.json  pipeline_utils.py  pyproject.toml  requirements.txt  run_pipeline.py  vercel.json
.github/workflows/: e1.1-chirps-lookup.yml  e1.2-ndvi-monitor.yml  e1.3-pilot-check.yml
chirps/: 0_download.py  1_close_boundary.py  2_clip.py  3_average.py
data/00_boundary/: Mahala_closed.geojson
data/04_average/: Mahala_CHIRPS_Jun_Sep_average_2014_2024_11years.tif
data/05_tables/: Mahala_CHIRPS_grid_lookup_2014_2024_11years.csv  Mahala_CHIRPS_score_lookup_2col_2014_2024_11years.csv  Mahsooli_CHIRPS_v2_RainfallLookup_Gedaref_2014-2024_processed_2026-06-08.xlsx  Mahsooli_CHIRPS_v2_RainfallLookup_Gedaref_2014-2024_processed_2026-06-09.xlsx  Mahsooli_CHIRPS_v2_RainfallLookup_Gedaref_2014-2024_processed_2026-06-18.xlsx  farmer_scores.csv
data/farmers/: baseline_plots.csv
data/pilot_check/: E1.3_Pilot_Check_2026-06-09.csv  E1.3_Pilot_Check_2026-06-09.xlsx  E1.3_Pilot_Check_2026-06-18.csv  (+3 more)
docs/: METHODOLOGY.md  SETUP_CREDENTIALS.md  lookup_in_google_sheets.md  pilot_test_plots.csv  sample_farmers.csv  sample_ndvi_farmers.csv
lib/: claude.js  firebase.js  firestore.js  media.js  sheets.js  storage.js  whatsapp.js
ndvi/: baseline.py  baseline_io.py  current.py  ee_auth.py  exports.py  farmers.py  registry.py  runlog.py  seasons.py  sheets.py
tests/: test_baseline_aggregation.py  test_baseline_exports.py  test_current_exports.py  test_gcs.py  test_google_sheets_lookup.py  test_pilot_launch_check.py  test_registry.py  test_seasons.py
tools/: google_sheets_lookup.py  pilot_launch_check.py  snap_score.py
utils/: session.js  validate.js
(+8 files in other folders)
